test/valid/fc36994_TestCastingWithErrors/TestCastingAutoError.plume
/**
 * For testing casting with automatic error
 * @author 36994, César Santos
 */
class TestCastingAutoError extends Object is
  method main : () -> String is
    (new CorrectCasting()).asString(5)