test/invalid/fc36994_TestAbstract/NotAbstractTest.plume
/**
 * For testing missing abstract
 * @author 36994, César Santos
 */
class NotAbstractTest extends Object is
  abstract method nothing : () -> Boolean is